add admin pages

--- a/app/views/admin/groups/index.html.twig
+++ b/app/views/admin/groups/index.html.twig
@@ -1,5 +1,24 @@
 {% extends 'admin/admin.html.twig' %}
 
 {% block content %}
-    Groups index page
+
+    <div>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Назва групи</th>
+                <th>Курс</th>
+                <th>Кількість людей</th>
+            </tr>
+            </thead>
+
+            {% for group in groups %}
+                <tr>
+                    <td>{{ group.group_name }}</td>
+                    <td>{{ group.group_course }}</td>
+                    <td>{{ group.group_students_count }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock %}
