--- a/app/views/admin/auditories/index.html.twig
+++ b/app/views/admin/auditories/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-        <h3></h3>
+        <h3><a href="{{ path('create_auditory') }}">Додати аудиторію</a></h3>
 
         <table class="table table-striped">
             <thead>
@@ -14,7 +14,7 @@
 
             {% for auditory in auditories %}
                 <tr>
-                    <td>{{auditory.auditory_number}}</td>
+                    <td><a href="{{ path('view_auditory_client', {'auditory_number' : auditory.auditory_number}) }}">{{auditory.auditory_number}}</a></td>
                     <td>{{auditory.auditory_type}}</td>
                 </tr>
             {% endfor %}
