--- a/app/views/admin/admin.html.twig
+++ b/app/views/admin/admin.html.twig
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Laravel</title>
+    <title>Админка</title>
 
     <link href="../../../assets/css/app.css" rel="stylesheet">
 
