--- a/app/views/subjects/index.html.twig
+++ b/app/views/subjects/index.html.twig
@@ -14,8 +14,10 @@
 
         {% for subject in subjects %}
         <tr>
-            <td>{{subject.subject_name}}</td>
-            <td>Викладач 1, Викладач 2</td>
+            <td><a href="{{ path('view_subject_client', {'subject_code' : subject.subject_code}) }}">{{subject.subject_name}}</a></td>
+            <td>
+                {% for teacher in subject.teachers %} <a href="{{ path('view_teacher_client', {'teacher_code' : teacher.teacher_code}) }}">{{ teacher.teacher_surname }} {{ teacher.teacher_name }} {{ teacher.teacher_last_name }}</a> {% endfor %}
+            </td>
         </tr>
         {% endfor %}
     </table>
