update admin controllers  and templates

--- a/app/views/admin/groups/index.html.twig
+++ b/app/views/admin/groups/index.html.twig
@@ -1,7 +1,9 @@
 {% extends 'admin/admin.html.twig' %}
 
 {% block content %}
-
+    <div>
+        <a href="{{ path('create_group') }}">Добавить групу</a>
+    </div>
     <div>
         <table class="table table-striped">
             <thead>
@@ -14,7 +16,7 @@
 
             {% for group in groups %}
                 <tr>
-                    <td>{{ group.group_name }}</td>
+                    <td><a href="{{ path('view_group_client', {'group_code' : group.group_code}) }}">{{ group.group_name }}</a></td>
                     <td>{{ group.group_course }}</td>
                     <td>{{ group.group_students_count }}</td>
                 </tr>
