--- a/app/views/admin/subjects/index.html.twig
+++ b/app/views/admin/subjects/index.html.twig
@@ -13,10 +13,12 @@
         </thead>
 
         {% for subject in subjects %}
-        <tr>
-            <td>{{subject.subject_name}}</td>
-            <td>Викладач 1, Викладач 2</td>
-        </tr>
+            <tr>
+                <td><a href="{{ path('view_subject_client', {'subject_code' : subject.subject_code}) }}">{{subject.subject_name}}</a></td>
+                <td>
+                    {% for teacher in subject.teachers %} <a href="{{ path('view_teacher_client', {'teacher_code' : teacher.teacher_code}) }}">{{ teacher.teacher_surname }} {{ teacher.teacher_name }} {{ teacher.teacher_last_name }}</a> {% endfor %}
+                </td>
+            </tr>
         {% endfor %}
     </table>
     </div>
