--- a/app/views/admin/groups/create.html.twig
+++ b/app/views/admin/groups/create.html.twig
@@ -13,10 +13,10 @@
             </div>
             <div>
                 <label for="group_name">
-                    Курс групи
+                    Рік вступу
                 </label>
                 <div>
-                    <input type="text" id="group_course" name="group_course" />
+                    <input type="number" id="group_course" name="group_course" min="2000" max="2015" />
                 </div>
             </div>
             <div>
