--- a/app/views/admin/groups/index.html.twig
+++ b/app/views/admin/groups/index.html.twig
@@ -9,7 +9,7 @@
             <thead>
             <tr>
                 <th>Назва групи</th>
-                <th>Курс</th>
+                <th>Рік вступу</th>
                 <th>Кількість людей</th>
             </tr>
             </thead>
