--- a/app/views/admin/subjects/index.html.twig
+++ b/app/views/admin/subjects/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-    <h3></h3>
+    <h3><a href="{{ path('create_subject') }}">Додати предмет</a></h3>
 
     <table class="table table-striped">
         <thead>
