--- a/app/views/groups/view.html.twig
+++ b/app/views/groups/view.html.twig
@@ -7,7 +7,7 @@
         </div>
 
         <div>
-            Курс: {{ group.group_course }}
+            Рік вступу: {{ group.group_course }}
         </div>
 
         <div>
