--- a/app/views/admin/admin.html.twig
+++ b/app/views/admin/admin.html.twig
@@ -12,6 +12,9 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    {% block css %}
+    {% endblock %}
 </head>
 <body>
 <div class="container">
@@ -21,6 +24,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle Navigation</span>
                     <span class="icon-bar"></span>
+
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
@@ -49,7 +53,10 @@
     </div>
 </div>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+{#<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>#}
+{% block js %}
+{% endblock %}
+{#<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>#}
+
 </body>
 </html>
